Edit: Manage secrets

--- a/site/about/overview-model-risk-management.qmd
+++ b/site/about/overview-model-risk-management.qmd
@@ -15,7 +15,7 @@ listing:
   fields: [title, description, reading-time]
 ---
 
-The {{< var validmind.platform >}} offers an integrated solution to manage validation reports, track findings, and report on model risk compliance across your model portfolio. {{< var vm.product >}} enables your organization to monitor and manage models effectively, focusing on mitigating risks, maintaining governance, and ensuring compliance throughout the entire enterprise. 
+The {{< var validmind.platform >}} offers an integrated solution to manage validation reports, track s, and report on model risk compliance across your model portfolio. {{< var vm.product >}} enables your organization to monitor and manage models effectively, focusing on mitigating risks, maintaining governance, and ensuring compliance throughout the entire enterprise. 
 
 ::: {.attn}
 
