--- a/site/guide/integrations/manage-secrets.qmd
+++ b/site/guide/integrations/manage-secrets.qmd
@@ -63,7 +63,7 @@ Recommended: Create a new secret and update integrations that should use it.<br>
 5. Make your changes. For example:
 
    - **[secret value]{.smallcaps}** — Paste a new value if the external platform issued a replacement token.
-   - **[expiration date (optional)]{.smallcaps}** — Extend the expiry window if you want to keep the secret active for longer.
+   - **[expiration date]{.smallcaps}** (optional) — Extend the expiry window if you want to keep the secret active for longer.
 
 6. Click **Update Secret** to save your changes. 
 
