Edit: Configure connections

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -13,7 +13,7 @@ Each connection enables you to authenticate and keep events flowing between plat
 
 - [x] {{< var link.login >}}
 - [x] You can manage workspace settings.[^1]
-- [x] The integration’s required secrets already exist in [Integration Secrets](manage-secrets.qmd).
+- [x] The integration’s required secrets already exist in integration secrets.[^2]
 - [x] You coordinated with the external system owner to obtain the required credentials and configuration details for the connection.
 
 :::
@@ -116,11 +116,11 @@ Required configuration details:
 
 4. In the modal that opens, select one of the supported connections, such as MLflow or Jira.
 
-5. Complete:
+5. Enter in the:
 
    - **[integration name]{.smallcaps}** — How other admins can identify the connection.
    - **[description]{.smallcaps}** (optional) — The intended usage or additional details.
-   - [**Connection-specific fields**](#supported-connections), such as:
+   - **Connection-specific fields**,[^3] such as:
       - **[tracking uri]{.smallcaps}** — The identifiers needed for the connection.
       - **[password]{.smallcaps}** — The secret that stores the secret key, password, or token required by the external service.
    - **[initial status]{.smallcaps}** — Set to `Operational` to enable immediately or `Disabled` if you plan to finish setup later.
@@ -184,4 +184,8 @@ If the test is successful, the message **{{< fa check-circle >}} Connection succ
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^2]: [Manage secrets](manage-secrets.qmd)
+
+[^3]: [Supported connections](#supported-connections)
 
