Edit: Managing integrations

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -42,6 +42,7 @@ graph TD
 
 Access built-in analytics and dashboards. Or, import analytics data into external reporting tools to build unified reports that combine {{< var vm.product >}} insights with other sources.[^1]
 
+::: {.feature}
 **Supported**
 
 :::: {.flex .flex-wrap .justify-around}
@@ -59,9 +60,14 @@ Access built-in analytics and dashboards. Or, import analytics data into externa
 :::
 ::::
 
+:::
+
+
 ### Model inventory
 
 Link to models in external registries and development platforms and keep inventories synced with versions, inventory fields, and other metadata.[^2]
+
+::: {.feature}
 
 **Supported**
 
@@ -82,6 +88,8 @@ Link to models in external registries and development platforms and keep invento
 :::
 ::::
 
+:::
+
 ### Workflows
 
 ::: {.column-margin}
@@ -90,21 +98,27 @@ Link to models in external registries and development platforms and keep invento
 
 Manage model lifecycles by configuring workflows to transition models through your organization’s custom model stages.[^3]
 
+::: {.feature}
+
 :::: {.flex .flex-wrap}
-::: {.w-50 .pr3}
+::: {.w-50 .pr5}
 **From {{< var vm.product >}}**  
 Send HTTP requests to external services when a model reaches a specific state or to trigger updates in other systems.
 :::
 
-::: {.w-50 .pl3}
+::: {.w-50 .pl3 .pr5}
 **From external systems**  
 Send webhooks (POST requests) into {{< var vm.product >}} to start workflows or to resume workflows that are paused and waiting for input.
 :::
 ::::
 
+:::
+
 ### Public REST API
 
 Gain programmatic access to platform resources. The API supports integration with custom scripts, automation tools, and external platforms that need direct access to {{< var vm.product >}}.[^4]
+
+::: {.feature}
 
 **CRUD examples**
 
@@ -124,9 +138,13 @@ Gain programmatic access to platform resources. The API supports integration wit
 
 ::::
 
+:::
+
 ### Testing & documentation
 
 Integrate the {{< var validmind.developer >}} with other development platforms to run tests and test suites, generate documentation, and support ongoing monitoring. See the results locally or upload them to the {{< var validmind.platform >}}.[^5]
+
+::: {.feature}
 
 **Supported**
 
@@ -146,9 +164,13 @@ Integrate the {{< var validmind.developer >}} with other development platforms t
 
 ::::
 
+:::
+
 ### Service integration
 
 Link to tickets in external systems and keep them synchronized. Attach tickets to {{< var vm.product >}} artifacts, such as model artifacts, to support coordinated tracking across your validation workflow and external project or issue management tools.
+
+::: {.feature}
 
 **Supported**
 
@@ -167,6 +189,8 @@ Link to tickets in external systems and keep them synchronized. Attach tickets t
 :::
 
 ::::
+
+:::
 
 ## Key concepts
 
