Fix typo, change some formatting, minor cleanup edits

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -42,7 +42,6 @@ graph TD
 
 Access built-in analytics and dashboards. Or, import analytics data into external reporting tools to build unified reports that combine {{< var vm.product >}} insights with other sources.[^1]
 
-::: {.feature}
 **Supported**
 
 :::: {.flex .flex-wrap .justify-around}
@@ -58,16 +57,14 @@ Access built-in analytics and dashboards. Or, import analytics data into externa
 ::: {.w-33-ns}
 <!-- - Snowflake -->
 :::
+
 ::::
 
-:::
-
+---
 
 ### Model inventory
 
 Link to models in external registries and development platforms and keep inventories synced with versions, inventory fields, and other metadata.[^2]
-
-::: {.feature}
 
 **Supported**
 
@@ -86,9 +83,10 @@ Link to models in external registries and development platforms and keep invento
 ::: {.w-33-ns}
 - GitLab
 :::
+
 ::::
 
-:::
+---
 
 ### Workflows
 
@@ -98,27 +96,25 @@ Link to models in external registries and development platforms and keep invento
 
 Manage model lifecycles by configuring workflows to transition models through your organization’s custom model stages.[^3]
 
-::: {.feature}
+:::: {.flex .flex-wrap .justify-around}
 
-:::: {.flex .flex-wrap}
 ::: {.w-50 .pr5}
 **From {{< var vm.product >}}**  
 Send HTTP requests to external services when a model reaches a specific state or to trigger updates in other systems.
 :::
 
-::: {.w-50 .pl3 .pr5}
+::: {.w-50 .pl3 .pr3}
 **From external systems**  
 Send webhooks (POST requests) into {{< var vm.product >}} to start workflows or to resume workflows that are paused and waiting for input.
 :::
+
 ::::
 
-:::
+---
 
 ### Public REST API
 
 Gain programmatic access to platform resources. The API supports integration with custom scripts, automation tools, and external platforms that need direct access to {{< var vm.product >}}.[^4]
-
-::: {.feature}
 
 **CRUD examples**
 
@@ -138,13 +134,11 @@ Gain programmatic access to platform resources. The API supports integration wit
 
 ::::
 
-:::
+---
 
 ### Testing & documentation
 
 Integrate the {{< var validmind.developer >}} with other development platforms to run tests and test suites, generate documentation, and support ongoing monitoring. See the results locally or upload them to the {{< var validmind.platform >}}.[^5]
-
-::: {.feature}
 
 **Supported**
 
@@ -164,13 +158,11 @@ Integrate the {{< var validmind.developer >}} with other development platforms t
 
 ::::
 
-:::
+---
 
-### Service integration
+### Service integrations
 
 Link to tickets in external systems and keep them synchronized. Attach tickets to {{< var vm.product >}} artifacts, such as model artifacts, to support coordinated tracking across your validation workflow and external project or issue management tools.
-
-::: {.feature}
 
 **Supported**
 
@@ -190,7 +182,6 @@ Link to tickets in external systems and keep them synchronized. Attach tickets t
 
 ::::
 
-:::
 
 ## Key concepts
 
