Working with model findings > Working with artifacts

--- a/site/guide/model-validation/managing-model-validation.qmd
+++ b/site/guide/model-validation/managing-model-validation.qmd
@@ -24,5 +24,5 @@ Enable your organization to use the {{< var validmind.platform >}} for validatio
 
 ## What's next
 
-- [Working with model findings](working-with-model-findings.qmd)
+- [Working with model findings](working-with-artifacts.qmd)
 - [Preparing validation reports](preparing-validation-reports.qmd)
