--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -115,7 +115,7 @@ Collaborate with other stakeholders and submit your work for approval:
 
 ## What's next
 
-- [Working with model findings](working-with-model-findings.qmd)
+- [Working with model findings](working-with-artifacts.qmd)
 
 
 <!-- FOOTNOTES -->
