View and filter model findings > View and filter artifacts*

--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -136,12 +136,12 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 [^8]: [Manage finding types](manage-finding-types.qmd)
 
-[^9]: [View and filter model findings](view-filter-model-findings.qmd)
+[^9]: [View and filter model findings](view-filter-artifacts.qmd)
 
 [^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
 [^11]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
 
-[^12]: [View and filter model findings](view-filter-model-findings.qmd)
+[^12]: [View and filter model findings](view-filter-artifacts.qmd)
 
 [^13]: [Manage finding types](manage-finding-types.qmd)
