--- a/site/guide/model-validation/customize-finding-overview-page.qmd
+++ b/site/guide/model-validation/customize-finding-overview-page.qmd
@@ -46,7 +46,7 @@ Default fields will always appear on your finding overview pages and are represe
 
 [^2]: [Add and manage model findings](add-manage-model-findings.qmd)
 
-[^3]: [View and filter model findings](view-filter-model-findings.qmd)
+[^3]: [View and filter model findings](view-filter-artifacts.qmd)
 
 [^4]: [Manage model finding fields](/guide/model-validation/manage-model-finding-fields.qmd#finding-field-types)
 
