--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -1,9 +1,11 @@
 ---
-title: "View and filter model findings"
+title: "View and filter artifacts"
 date: last-modified
+aliases: 
+  - view-filter-model-findings.qmd
 ---
 
-Access a complete list of filterable findings logged across all your models in the {{< var validmind.platform >}}, or look at only findings linked to a specific model.
+Access a complete list of filterable artifacts logged across all your models in the {{< var validmind.platform >}}, or look at only artifacts linked to a specific model.
 
 ::: {.attn}
 
@@ -11,24 +13,24 @@ Access a complete list of filterable findings logged across all your models in t
 
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
-- [x] There are findings logged on any model.[^2]
+- [x] There are artifacts logged on any model.[^2]
 - [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
 :::
 
-## View model findings
+## View model artifacts
 
-You can review findings for all models at once, or only look at findings linked to a specific model.
+You can review artifacts for all models at once, or only look at artifacts linked to a specific model.
 
 ::: {.panel-tabset}
 
-#### All model findings
+#### All model artifacts
 
 {{< include _view-all-findings.qmd >}}
 
-#### Model-specific findings
+#### Model-specific artifacts
 
-To view findings linked to a specific model:
+To view artifacts linked to a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -42,7 +44,7 @@ To view findings linked to a specific model:
    - Policy Exception
    - Model Limitation
 
-   In the page that opens is a list of all model findings for that type.
+   In the page that opens is a list of all model artifacts for that type.
 
 4. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.[^6]
 
@@ -59,18 +61,18 @@ To view findings linked to a specific model:
 
 :::
 
-## Filter and sort model findings
+## Filter and sort model artifacts
 
 :::{.callout}
 Changes are automatically saved to your account and do not affect other users.
 :::
 
-- By default, findings for all models are listed by creation date in descending order.
-- To sort findings by a column in ascending ({{< fa angle-down >}}) or descending ({{< fa angle-up >}}) order, click on the column header.
+- By default, artifacts for all models are listed by creation date in descending order.
+- To sort artifacts by a column in ascending ({{< fa angle-down >}}) or descending ({{< fa angle-up >}}) order, click on the column header.
 
-To narrow down the findings, you can apply some filters:
+To narrow down the artifacts, you can apply some filters:
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model findings.
+1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model artifacts.
 
 2. Select a finding type[^7] to view from the tabs:
 
@@ -82,7 +84,7 @@ To narrow down the findings, you can apply some filters:
 
 4. On the **Select Your Filters** dialog that opens, enter your filtering criteria.[^8]
 
-   For example, to filter by open findings for the Customer Churn Model assigned to Jane Doe:
+   For example, to filter by open artifacts for the Customer Churn Model assigned to Jane Doe:
 
       - **[status]{.smallcaps}** — `Open`
       - **[model inventory]{.smallcaps}** — `Customer Churn Model`
