--- a/site/guide/model-validation/working-with-artifacts.qmd
+++ b/site/guide/model-validation/working-with-artifacts.qmd
@@ -9,7 +9,7 @@ listing:
     grid-columns: 2
     fields: [title, description]
     contents:
-      - view-filter-model-findings.qmd
+      - view-filter-artifacts.qmd
       - customize-model-findings-layouts.qmd
       - add-manage-model-findings.qmd
       - customize-finding-overview-page.qmd
