Customize model findings layouts > Customize artifact layouts*

--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -1,9 +1,11 @@
 ---
-title: "Customize model findings layouts"
+title: "Customize artifact layouts"
 date: last-modified
+aliases: 
+  - customize-model-findings-layouts.qmd
 ---
 
-Configure the information that displays by default on the list of all tracked model findings for each finding type.
+Configure the information that displays by default on the list of all tracked model artifacts for each finding type.
 
 ::: {.attn}
 
@@ -11,7 +13,7 @@ Configure the information that displays by default on the list of all tracked mo
 
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
-- [x] There are findings logged on any model.[^2]
+- [x] There are artifacts logged on any model.[^2]
 
 :::
 
@@ -21,9 +23,9 @@ Configure the information that displays by default on the list of all tracked mo
 Changes are automatically saved to your account and do not affect other users.
 :::
 
-Customize what is displayed on your list of all model findings for each finding type:
+Customize what is displayed on your list of all model artifacts for each finding type:
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model findings.
+1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model artifacts.
 
 2. Select a finding type[^3] to view from the tabs:
 
@@ -39,7 +41,7 @@ Customize what is displayed on your list of all model findings for each finding 
 
 Once customized, you can save a view for later application.[^5]
 
-### Manage custom findings views
+### Manage custom artifacts views
 
 :::{.callout}
 Saved views are unique to you and do not display for other users in your organization.
@@ -47,23 +49,23 @@ Saved views are unique to you and do not display for other users in your organiz
 
 ::: {.panel-tabset}
 
-#### Save findings views
+#### Save artifacts views
 
-You can save custom findings configuration as a view to reapply at any time for each finding type:
+You can save custom artifacts configuration as a view to reapply at any time for each finding type:
 
-1. Customize a findings layout.[^6]
+1. Customize a artifacts layout.[^6]
 
    You can also apply filters or sorting before saving your view to include them in the view.[^7]
 
 {{< include /guide/model-inventory/_save-layout-view.qmd >}}
 
-#### Edit or remove saved findings views
+#### Edit or remove saved artifacts views
 
 ::: {.callout-important}
 Deletion of saved views is permanent.
 :::
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model findings.
+1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model artifacts.
 
 {{< include /guide/model-inventory/_remove-layout-view.qmd >}}
 
